# mkautoflint

./: AUTHORS  INSTALL  Makefile.am  README  autostructure.sh  autotools.mk  build-setup.sh  clean-setup.sh  configure.ac  generate-rules.sh  mkautoflint.sh
